@@ -281,6 +281,18 @@
           <h3>Already baked development packages</h3>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.25/cheese-2.25.1.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.25.1
+              </a>
+              <p>
+              released on November 3rd 2008<br />
+              md5sums: 40fa1c69f3f719e15a294c0f7eb46f23
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.23/cheese-2.23.92.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
