@@ -140,6 +140,21 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>November 3rd 2008</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.25.1 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>changed the default font of the countdown widget to bitstream vera sans bold</li>
+            <li>drop libgnome/libgnome-vfs dependencies</li>
+            <li>show the fullscreen toolbar always when in effects chooser mode</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-November/msg00018.html">full release notes</a>)
+
           <h3>October 20th 2008</h3>
           <p>
           <b>Stable</b>
