@@ -1,3 +1,9 @@
+2008-11-13  daniel g. siegel <dgsiegel@gmail.com>
+
+	* projects.gnome.org/cheese/download.html,
+	  projects.gnome.org/cheese/index.html: 
+	  populate the cheese 2.25.1 release
+
 2008-11-12  Murray Cumming  <murrayc@murrayc.com>
 
 	* projects.gnome.org/: Really correct the urlpath values in the 
